# pkg/model/sqls.go
@@ -12,7 +12,10 @@ var CreateTaskTableSQL = `CREATE TABLE IF NOT EXISTS ETH_TASK (
     chainId   INTEGER DEFAULT (0),
     rpc       TEXT    NOT NULL,
     [begin]   INTEGER DEFAULT (1),
-    [current] INTEGER DEFAULT (1) 
+    [current] INTEGER DEFAULT (1),
+    [paused]   INTEGER DEFAULT (0),
+    [updatedAt] INTEGER DEFAULT (0),
+    [deletedAt] INTEGER DEFAULT (0)
 );
 `
 
